resources/css/style.css
/* Global Styles */

html {
  font-size: 18px;
  font-family: Helvetica;
}

body {
  line-height: 1.4rem;
}

h1, h2 {
  font-weight: bold;
  text-transform: uppercase;
}

h1 {
  font-size: 2rem;
  line-height: 1.2;
}

.flex {
  display: flex;
  align-items: center;
  justify-content: center;
}

.container {
  width: 960px;
}

.section {
  margin-top: 3rem;
}

/* Navigation */

.nav-absolute {
  position: absolute;
  width: 100%;
  top: 1rem;
  color: white;
}

.nav-inner {
  background-color: cadetblue;
  justify-content: space-between;
}

.nav-logo-image {
  height: 1.5rem;
  width: auto;
  margin: 0 1rem 0 2rem;
}

.nav-links-item {
  margin: 1rem 2rem 1rem 0;
}

.nav-links-item a {
  color: white;
  text-decoration: none;
}

.nav-condensed {
  display: none;
}

/* Image Banner */

.image-banner-outer {
  background-image: url("../img/glasses-bg.png");
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center;
  height: 30rem;
  align-items: flex-start;
}

.image-banner-tagline {
  background-color: white;
  padding: 1.5rem 5rem;
  float: right;
  position: relative;
  top: 14rem;
  left: 2rem;
}

/* Features */

.features-item {
  margin: 0 3rem;
  width: 5rem;
  height: 8rem;
  text-align: center;
  flex-direction: column;
  justify-content: space-between;
}

.features-image img {
  width: 5rem;
}

img.paper-icon {
  width: 3.5rem;
}

/* Store Info */

.store-info-inner {
  align-items: flex-start;
}

.store-info-item {
  width: 35%;
  margin: 0 2.5%;
}

.store-info-item-header {
  width: 10rem;
  color: white;
  background-color: cadetblue;
  padding: 0.5rem 1.25rem;
  margin-bottom: 1rem;
}

/* Footer */

.footer-outer {
  margin-top: 5rem;
}

.footer-inner {
  justify-content: flex-start;
  background-color: azure;
  padding: 4rem;
}

.footer-logo-image {
  height: 1.5rem;
  width: auto;
  margin-right: 1rem;
}

/* Media Queries */

@media only screen and (max-width: 1024px) {

  h1 {
    font-size: 1.33rem;
  }

  .nav-absolute {
    top: 0;
  }

  .container {
    width: 100%;
  }

  .image-banner-outer {
    height: 22rem;
  }

  .image-banner-tagline {
    top: 9rem;
    left: -2rem;
    padding: 0.75rem 4rem;
  }
}

@media only screen and (max-width: 700px) {

  h1 {
    font-size: 1rem;
  }

  .section {
    margin-top: 3.77rem;
  }

  .nav-logo-text {
    display: none;
  }

  .nav-full {
    display: none;
  }

  .nav-condensed {
    display: block;
  }

  .image-banner-outer {
    background-position: 20%;
    height: 17rem;
  }

  .image-banner-tagline {
    text-align: center;
    width: 100%;
    margin: 0 auto;
    padding: 1rem 0;
    left: 0;
    top: 12rem;
  }

  .features-inner {
    flex-direction: column;
  }

  .features-item {
    height: auto;
  }

  .features-item:not(:first-child) {
    margin-top: 1.54rem;
  }

  .features-caption {
    font-size: 0.77rem;
  }

  .store-info-inner {
    flex-direction: column;
    align-items: center;
  }

  .store-info-item {
    width: 100%;
  }

  .store-info-item:not(:first-child) {
    margin-top: 4rem;
  }

  .store-info-item-header {
    width: 100%;
    text-align: center;
  }

  .store-info-item-text {
    font-size: 0.77rem;
    padding: 0 1rem;
  }

  .footer-inner {
    justify-content: center;
  }

  .footer-logo-text {
    display: none;
  }

  .footer-logo-image {
    margin: 0;
  }

}

